plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.jetbrains.kotlin.jvm'
    id "org.sonarqube" version "6.0.1.5171"
}

group = 'ssafy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    // commons-logging 충돌 해결
    all*.exclude group: 'commons-logging', module: 'commons-logging'
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2023.0.3")
}

dependencies {
    // 카프카 의존성 추가
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.cloud:spring-cloud-starter'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // JWT 라이브러리
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // AWS S3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.287'
    implementation 'software.amazon.awssdk:s3:2.20.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

    // Monitoring
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // HTML 검증
    implementation 'org.jsoup:jsoup:1.15.3' // 최신 버전으로 변경

    //엑셀파일
    implementation 'org.apache.poi:poi:5.2.3'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
    
    // Rate Limiting (사용자 정의 구현)
}

sonarqube {
    properties {
        def sonarProjectKey = System.getenv("SONAR_PROJECT_KEY")
        def sonarHostUrl = System.getenv("SONAR_HOST_URL")
        def sonarLogin = System.getenv("SONAR_TOKEN")
        println "[DEBUG] SONAR_PROJECT_KEY = ${System.getenv("SONAR_PROJECT_KEY")}"
        println "[DEBUG] SONAR_HOST_URL    = ${System.getenv("SONAR_HOST_URL")}"
        println "[DEBUG] SONAR_TOKEN       = ${System.getenv("SONAR_TOKEN")}"

        if (!sonarProjectKey || !sonarHostUrl || !sonarLogin) {
            throw new GradleException("필수 SonarQube 환경변수가 누락되었습니다.")
        }

        property "sonar.projectKey", sonarProjectKey
        property "sonar.host.url", sonarHostUrl
        property "sonar.login", sonarLogin
        property "sonar.sourceEncoding", "UTF-8"
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", project.findProperty("sonar.projectKey")
        property "sonar.host.url", project.findProperty("sonar.host.url")
        property "sonar.token", project.findProperty("sonar.token")
    }
}

task printApiKey {
    doLast {
        println "API Key: ${project.findProperty('myApiKey')}"
    }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}